--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
 
 <body>
   <!-- Main Menu -->
-  <div class="container-fluid" style="padding: 0px;">
-    <nav class="navbar navbar-expand-md MainMenu" role="navigation">
-      <a class="navbar-brand" onclick="ChangeScreens(1)">SolAZDev</a>
-      <button class="navbar-toggler navbar-dark bg-dark" data-target="#MainNavMenu" data-toggle="collapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div id="MainNavMenu" class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item"> <a class="nav-link" href="#" onclick="ChangeScreens(3)">Portfolio</a></li>
-          <li class="nav-item"> <a class="nav-link" href="#" onclick="ChangeScreens(2)">Resume</a></li>
-          <li class="nav-item"> <a class="nav-link" href="#" onclick="ChangeScreens(4)">Projects</a></li>
+  <div class="MainMenu">
+    <div class="container" style="padding: 0px;">
+
+      <nav class="navbar navbar-expand-md " role="navigation">
+        <a class="navbar-brand" onclick="ChangeScreens(1)">SolAZDev</a>
+        <button class="navbar-toggler navbar-dark bg-dark" data-target="#MainNavMenu" data-toggle="collapse">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="MainNavMenu" class="collapse navbar-collapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item"> <a class="nav-link" href="#" onclick="ChangeScreens(3)">Portfolio</a></li>
+            <li class="nav-item"> <a class="nav-link" href="#" onclick="ChangeScreens(2)">Resume</a></li>
+            <li class="nav-item"> <a class="nav-link" href="#" onclick="ChangeScreens(4)">Projects</a></li>
+      </nav>
+    </div>
     </nav>
   </div>
-  </nav>
   </div>
 
   <!--
@@ -105,7 +108,7 @@
 
   <!-- Portflio Sections -->
   <div id="PortLevel">
-    <div class='container-fluid'>
+    <div class='container'>
       <div class="text-center">
         <h3>Level Design Screenshots</h3>
       </div>
@@ -122,8 +125,6 @@
           <a target="_blank" href="img/Esmeron Forest NW.png">
             <img class="img-responsive" src="img/Map2.png" style="width:100%;" /></a>
         </div>
-      </div>
-      <div class="row">
         <div class="col-md-4">
           <a target="_blank" href="img/CDMap1.png">
             <img class="img-responsive" src="img/CDMap1p.png" style="width:100%" /></a>
@@ -142,7 +143,7 @@
   </div>
 
   <div id="Port3D">
-    <div class='container-fluid'>
+    <div class='container'>
       <div class="text-center">
         <h4>3D Art - WIP</h4><br />More incoming!!
       </div>
@@ -180,7 +181,7 @@
 
   <!-- Resume Screen -->
   <div id="ResumePage">
-    <div class="container-fluid">
+    <div class="container">
       <div class="container" style="text-align:justify">
         <br />
         <div class="text-center">
@@ -201,20 +202,20 @@
           </div>
           <div class="col-sm-4">
             <div class="text-center"><b>As a Developer</b></div></br>
-            As a developer, I seek to write my code as efficient and as clean as I can.
+            I seek to write my code as efficient and as clean as I can.
             My code is always readable, efficient and leave as little footprint as
             possible, to deliver the best experience to the user, and player.
           </div>
           <div class="col-sm-4">
             <div class="text-center"><b>As an Artist</b></div></br>
-            As an artist I work from the main idea, upwards. I will make sure the main idea is
+            I work from the main idea, upwards. I will make sure the main idea is
             portrayed clearly and as complex as it may need to be, for 3D I specialize in
             Low-poly with smooth topology for the best performance.
           </div>
-
         </div>
       </div>
       <br />
+
       <div class="row">
         <div class="col">
           <h5>Skillset</h5>
@@ -237,7 +238,7 @@
           <ul>
             <li>Unity, Game Maker Studio, RPG Maker (XP,VXA,MV)</li>
             <li>Visual Studio Code, MonoDevelop, Linux</li>
-            <li>Maya, Blender</li>
+            <li>Blender, Maya</li>
             <li>After Effects, Kdenlive</li>
             <li>Photoshop, Illustrator, Gimp, Krita, Inkscape</li>
           </ul>
@@ -254,7 +255,6 @@
         <div class="text-center">
           <h5>Work Experience</h5>
         </div>
-
         <div class="row">
 
           <div class="col-sm-4">
@@ -262,36 +262,17 @@
               <tbody>
                 <tr>
                   <td>Job:</td>
-                  <td>Video Game Design Instructor</td>
+                  <td>Lead Game App Developer</td>
                 </tr>
                 <tr>
                   <td>Durning</td>
-                  <td>Febuary to April, 2016</td>
+                  <td>Febuary - September 2018</td>
                 </tr>
                 <tr>
                   <td>About</td>
-                  <td>I worked as a Video Game Design Instructor (3pm to 5pm) at Escuela Mariano Abril Intermedia. My
-                    Work involved teaching students the principles of 3D Modeling, Level Design and Game Programming.</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
-          <div class="col-sm-4">
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td>Job:</td>
-                  <td>Head Programmer</td>
-                </tr>
-                <tr>
-                  <td>Durning</td>
-                  <td>August 2016 - Febuary 2017</td>
-                </tr>
-                <tr>
-                  <td>About</td>
-                  <td>I was the Head for Game & App Programming in a starting company called Axiom Horizon. Most of the
-                    work was done with Unity and HTML5.
+                  <td> I worked as a <b>Unity Specialist</b> in a company called Require Technology, know for their
+                    educational software Genial Skills. I was in charge of the core for the new iteration of their
+                    proyect, including Server Networking, Game Quizes and displayin non-uniform data.
                   </td>
                 </tr>
               </tbody>
@@ -324,18 +305,37 @@
               <tbody>
                 <tr>
                   <td>Job:</td>
-                  <td>Lead Game App Developer</td>
+                  <td>Head Programmer</td>
                 </tr>
                 <tr>
                   <td>Durning</td>
-                  <td>Febuary - September 2018</td>
+                  <td>August 2016 - Febuary 2017</td>
                 </tr>
                 <tr>
                   <td>About</td>
-                  <td> I worked as a <b>Unity Specialist</b> in a company called Require Technology, know for their
-                    educational software Genial Skills. I was in charge of the core for the new iteration of their
-                    proyect, including Server Networking, Game Quizes and displayin non-uniform data.
+                  <td>I was the Head for Game & App Programming in a starting company called Axiom Horizon. Most of the
+                    work was done with Unity and HTML5.
                   </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="col-sm-4">
+            <table class="table">
+              <tbody>
+                <tr>
+                  <td>Job:</td>
+                  <td>Video Game Design Instructor</td>
+                </tr>
+                <tr>
+                  <td>Durning</td>
+                  <td>Febuary to April, 2016</td>
+                </tr>
+                <tr>
+                  <td>About</td>
+                  <td>I worked as a Video Game Design Instructor (3pm to 5pm) at Escuela Mariano Abril Intermedia. My
+                    Work involved teaching students the principles of 3D Modeling, Level Design and Game Programming.</td>
                 </tr>
               </tbody>
             </table>
@@ -348,7 +348,7 @@
 
   <!-- Projects Screen -->
   <div id="ProjectsPage">
-    <div class="container-fluid">
+    <div class="container">
       <div class="text-center">
         <h4>Projects</h4>
         <p>These are projects that I have worked on alone or have done collaboratively</p>
@@ -366,27 +366,27 @@
             </div>
           </div>
 
-          <div class="col-sm-6" id="PrPB16" onclick="ChangeScreens(10)">
+          <div class="col-sm-6" id="PrGSW" onclick="ChangeScreens(14)">
             <div class="card">
               <div class="card-body">
-                <img src="img/PB16Landing-1.png" style="width:350px;height:230px;" />
+                <img src="img/GSWTitle.png" />
               </div>
               <div class="card-footer">
-                PiBoy5 The HTML5 PipBoy
+                Genial Skills Web
               </div>
             </div>
           </div>
-        </div>
 
+        </div>
         <div class="row">
 
-          <div class="col-sm-6" id="PrPCD" onclick="ChangeScreens(11)">
+          <div class="col-sm-6" id="PrOhtThT" onclick="ChangeScreens(13)">
             <div class="card">
               <div class="card-body">
-                <img src="https://img.itch.zone/aW1hZ2UvMTUwNTQ5LzY5MDY0OS5wbmc=/315x250%23c/omVZTU.png" />
+                <img src="https://img.itch.zone/aW1hZ2UvMzAwNjU5LzE0NzA3MjYucG5n/315x250%23c/A0hq91.png" />
               </div>
               <div class="card-footer">
-                Project Color Death
+                Oh How the Turns have Tabled
               </div>
             </div>
           </div>
@@ -403,30 +403,30 @@
           </div>
 
         </div>
-
         <div class="row">
 
-          <div class="col-sm-6" id="PrOhtThT" onclick="ChangeScreens(13)">
+          <div class="col-sm-6" id="PrPCD" onclick="ChangeScreens(11)">
             <div class="card">
               <div class="card-body">
-                <img src="https://img.itch.zone/aW1hZ2UvMzAwNjU5LzE0NzA3MjYucG5n/315x250%23c/A0hq91.png" />
+                <img src="https://img.itch.zone/aW1hZ2UvMTUwNTQ5LzY5MDY0OS5wbmc=/315x250%23c/omVZTU.png" />
               </div>
               <div class="card-footer">
-                Oh How the Turns have Tabled
+                Project Color Death
               </div>
             </div>
           </div>
 
-          <div class="col-sm-6" id="PrOhtThT" onclick="ChangeScreens(14)">
+          <div class="col-sm-6" id="PrPB16" onclick="ChangeScreens(10)">
             <div class="card">
               <div class="card-body">
-                <img src="img/GSWTitle.png" />
+                <img src="img/PB16Landing-1.png" style="width:350px;height:230px;" />
               </div>
               <div class="card-footer">
-                Genial Skills Web
+                PiBoy5 The HTML5 PipBoy
               </div>
             </div>
           </div>
+
 
         </div>
 
@@ -584,7 +584,7 @@
             <tbody>
               <tr>
                 <td>Status</td>
-                <td style="text-align:right;">V1 Completed</td>
+                <td style="text-align:right;">V1 Completed, v2 Early Development</td>
               </tr>
               <tr>
                 <td>Genre</td>
@@ -596,12 +596,13 @@
               </tr>
             </tbody>
           </table>
-          </div>
           <div class="text-center"><h5>Links</h5>
             <a target="_blank" href="http://solazdev.github.io/PiBoy5">Main Page</a>
           </div>
           </div>
         </div>
+          </div>
+          
     </div>
 
     <div id="PI-PCLD" class="GamePage">
