--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/SolAZDev.js"></script>
-  <link rel="stylesheet" href="css/sass/DarkAzure.min.css" />
+  <link rel="stylesheet" href="css/sass/DarkAzure.css" />
 </head>
 
 <body>
